--- a/war/Cosmos.css
+++ b/war/Cosmos.css
@@ -7,6 +7,7 @@ body {
   padding: 30px;
   color: #777777;
   text-align: center;
+  background-color: yellow;
 }
 
 .classOne{
@@ -17,7 +18,4 @@ body {
 
 
 .classTwo{
-    padding: 60px;
-    margin: 20px;
-    color: rgb(51,51,51);
 }
